--- a/style.scss
+++ b/style.scss
@@ -3,55 +3,55 @@ $main-color:#bcff67;
 $accent-color:#004f4f;
 
 .menu-wrapper {
-    // メニュー要素の位置設定、左ビューポート70％を余白
-    margin-left: 70vw;
-
-    // サイズ指定、横VW30%でmarginと合わせ100、縦100Vh
-    width: 30vw;
+    // サイズ指定、横VW100、縦100Vh
+    width: 100vw;
     height: 100vh;
-    
-
     
     // flexbox指定、子要素は縦列
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
+    align-items: flex-end;
 
-.menu-item {
-    height: 15vh;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
-    // 色指定
-    background-color: $main-color;
-    
-    canvas {
-        position: fixed;
-    }
-
-    section {
-        width: 30vw;
+    .menu-item {
         height: 15vh;
-
+        
         display: flex;
         justify-content: center;
         align-items: center;
+
+        // 色指定
+        background-color: $main-color;
         
-        text-align: center;
+        canvas {
+            position: fixed;
+            width: 10vw;
+            height: 10vh;
+        }
+
+        section {
+            width: 30vw;
+            height: 15vh;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            
+            text-align: center;
+        }
+
+        :hover {
+            background-color: $base-color;
+        } 
     }
 
-    :hover {
-        background-color: $base-color;
-    } 
+    .menu-spacer{
+        width: 30vw;
+        height: 20vh;
+
+        // 色指定
+        background-color: $main-color;
+    }
+
 }
-
-.menu-spacer{
-    height: 20vh;
-
-    // 色指定
-    background-color: $main-color;
-}
-
