--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,14 @@
   align-items: center;
   background-color: #bcff67;
 }
+.menu-wrapper .menu-item p {
+  z-index: 300;
+}
 .menu-wrapper .menu-item canvas {
   position: fixed;
-  width: 10vw;
-  height: 10vh;
+  width: 30vw;
+  height: 15vh;
+  z-index: 200;
 }
 .menu-wrapper .menu-item section {
   width: 30vw;
@@ -25,9 +29,6 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-}
-.menu-wrapper .menu-item :hover {
-  background-color: #ffffff;
 }
 .menu-wrapper .menu-spacer {
   width: 30vw;
