--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ $accent-color:#004f4f;
         transition: 500ms;
 
         p {
-            z-index: 300;
+            transform: rotate(45deg);
         }
 
         canvas {
@@ -52,6 +52,8 @@ $accent-color:#004f4f;
             align-items: center;
             
             text-align: center;
+
+            z-index: 400;
         }
 
         // :hover {
