--- a/style.scss
+++ b/style.scss
@@ -7,12 +7,24 @@ $accent-color:#004f4f;
     width: 100vw;
     height: 100vh;
     
-    // flexbox指定、子要素は縦列
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
+    // // flexbox指定、子要素は縦列
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-between;
+    // align-items: flex-end;
 
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+    .item {
+        width: 40px;
+        height: 40px;
+
+        background-color: #004f4f;
+
+        transition: 500ms;
+    }
 
     .menu-item {
         width: 30vw;
