draw-tile-position-fix

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ body #contents-tab section .tab-title {
   width: 20vw;
   height: 30vh;
   background-color: #bcff67;
+  border-color: #bcff67;
+  border-width: 1px;
+  border-style: solid;
   transition: 500ms;
 }
 body #contents-tab section .tab-content {
@@ -39,5 +42,10 @@ body #contents-tab section:nth-child(odd) {
   flex-direction: row-reverse;
 }
 body .draw-tile {
-  background-color: #bcff67;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  background-color: #004f4f;
 }/*# sourceMappingURL=style.css.map */
