--- a/style.scss
+++ b/style.scss
@@ -72,9 +72,11 @@ body {
         top: 50%;
         left: 50%;
 
-        width: 5px;
-        height: 5px;
+        z-index: -10000;
 
-        background-color: #004f4f;
+        width: 50px;
+        height: 50px;
+
+        background-color: #bcff67;
     }
 }
