--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,8 @@ body #contents-tab section .tab-title {
   align-items: center;
   width: 20vw;
   height: 30vh;
-  background-color: #bcff67;
-  border-color: #bcff67;
+  background-color: #deffb3;
+  border-color: #deffb3;
   border-width: 1px;
   border-style: solid;
   transition: 500ms;
@@ -43,10 +43,10 @@ body #contents-tab section:nth-child(odd) {
 }
 body .draw-tile {
   position: fixed;
-  top: 50%;
-  left: 50%;
+  left: 20vw;
+  top: 0;
   z-index: -10000;
-  width: 50px;
-  height: 50px;
-  background-color: #bcff67;
+  width: 5px;
+  height: 5px;
+  background-color: #deffb3;
 }/*# sourceMappingURL=style.css.map */
