--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 $base-color:#ffffff;
-$main-color:#bcff67;
+$main-color:#deffb3;
 $accent-color:#004f4f;
 
 body {
@@ -29,8 +29,8 @@ body {
                 width: 20vw;
                 height: 30vh;
 
-                background-color: #bcff67;
-                border-color: #bcff67;
+                background-color: $main-color;
+                border-color: $main-color;
                 border-width: 1px;
                 border-style: solid;
 
@@ -69,14 +69,14 @@ body {
 
     .draw-tile {
         position: fixed;
-        top: 50%;
-        left: 50%;
+        left: 20vw;
+        top: 0;
 
         z-index: -10000;
 
-        width: 50px;
-        height: 50px;
+        width: 5px;
+        height: 5px;
 
-        background-color: #bcff67;
+        background-color: $main-color;
     }
 }
