--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,12 @@ body #contents-tab section:nth-child(odd) {
 }
 body .draw-tile {
   position: fixed;
-  left: 20vw;
+  left: 0;
   top: 0;
   z-index: -10000;
   width: 16px;
   height: 16px;
+  transition: 1000ms;
 }
 body .draw-tile-odd {
   background-color: #deffb3;
