--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,7 @@ $accent-color:#003881;
 body {
     color: $accent-color;
     font-family: 'Open Sans','Zen Kaku Gothic New', sans-serif;
-
+    
     h1 {
         font-size: x-large;
     }
@@ -69,7 +69,7 @@ body {
 
     .draw-tile {
         position: fixed;
-        left: 20vw;
+        left: 0;
         top: 0;
 
         z-index: -10000;
@@ -77,6 +77,7 @@ body {
         width: 16px;
         height: 16px;
 
+        transition: 1000ms;
     }
     
     .draw-tile-odd {
