--- a/style.scss
+++ b/style.scss
@@ -35,10 +35,6 @@ body {
                 border-style: solid;
 
                 transition: 500ms;
-
-                h2 {
-
-                }
             
             }
     
@@ -60,10 +56,12 @@ body {
                 
             }
         }
-
-        section:nth-child(odd){
-            display: flex;
-            flex-direction: row-reverse;
+    
+    @media screen and (min-width: 1000px){
+            section:nth-child(odd){
+                display: flex;
+                flex-direction: row-reverse;
+            }
         }
     }
 
@@ -77,7 +75,7 @@ body {
         width: 32px;
         height: 32px;
 
-        transition: 1000ms;
+        transition: 500ms;
     }
     
     .draw-tile-odd {
@@ -89,5 +87,21 @@ body {
         border-color: #deffb3;
 
         background-color: $base-color;
+    }
+
+    .scroll-guide {
+        align-items: center;
+
+        position: fixed;
+        left: 20vw;
+        top: 100vw;
+
+        width: 60vw;
+        height: 100vh;
+
+        p {
+            width: 60vw;
+            text-align: center;
+        }
     }
 }
