--- a/style.scss
+++ b/style.scss
@@ -91,16 +91,20 @@ body {
 
     .scroll-guide {
         align-items: center;
+        display: flex;
 
         position: fixed;
         left: 20vw;
-        top: 100vw;
+        top: 95vh;
 
         width: 60vw;
-        height: 100vh;
+        // height: 5vh;
 
         p {
             width: 60vw;
+            
+            flex-direction: column-reverse;
+            align-items: flex-end;
             text-align: center;
         }
     }
