--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,7 @@ body {
                 height: 30vh;
 
                 background-color: $main-color;
-                border-color: $main-color;
+                border-color: $accent-color;
                 border-width: 1px;
                 border-style: solid;
 
@@ -104,7 +104,7 @@ body {
             width: 60vw;
             
             flex-direction: column-reverse;
-            align-items: flex-end;
+            justify-content: flex-end;
             text-align: center;
         }
     }
