--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,10 @@
-$base-color:#ffffff;
+$base-color:#fdfaff;
 $main-color:#deffb3;
 $accent-color:#003881;
 
 body {
     color: $accent-color;
+    background-color: $base-color;
     font-family: 'Open Sans','Zen Kaku Gothic New', sans-serif;
     
     h1 {
@@ -29,10 +30,11 @@ body {
                 width: 20vw;
                 height: 30vh;
 
-                background-color: $main-color;
-                border-color: $accent-color;
-                border-width: 1px;
-                border-style: solid;
+                background-color: $base-color;
+                
+                border-color: $main-color;
+                border-width: 5px;
+                border-style: double;
 
                 transition: 500ms;
             
@@ -75,7 +77,7 @@ body {
         width: 32px;
         height: 32px;
 
-        transition: 500ms;
+        transition: 100ms;
     }
     
     .draw-tile-odd {
