--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,7 @@ body {
     
     h1 {
         font-size: x-large;
+        text-align: center;
     }
 
     #contents-tab {
@@ -31,7 +32,7 @@ body {
                 height: 30vh;
 
                 background-color: $base-color;
-                
+
                 border-color: $main-color;
                 border-width: 5px;
                 border-style: double;
