--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@ body {
 
                 border-color: $main-color;
                 border-width: 5px;
-                border-style: double;
+                border-style: dotted;
 
                 transition: 500ms;
             
