--- a/style.scss
+++ b/style.scss
@@ -55,6 +55,8 @@ body {
                 p {
                     width: 60vw;
                     text-align: center;
+
+                    font-size: x-large;
                 }
                 
             }
