--- a/style.scss
+++ b/style.scss
@@ -8,7 +8,7 @@ body {
     font-family: 'Open Sans','Zen Kaku Gothic New', sans-serif;
     
     h1 {
-        font-size: x-large;
+        font-size: 48px;
         text-align: center;
     }
 
@@ -56,7 +56,7 @@ body {
                     width: 60vw;
                     text-align: center;
 
-                    font-size: x-large;
+                    font-size: 32px;
                 }
                 
             }
