--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   font-family: "Open Sans", "Zen Kaku Gothic New", sans-serif;
 }
 body h1 {
-  font-size: x-large;
+  font-size: 32px;
   text-align: center;
 }
 body #contents-tab {
@@ -23,7 +23,7 @@ body #contents-tab section .tab-title {
   background-color: #fdfaff;
   border-color: #deffb3;
   border-width: 5px;
-  border-style: dotted;
+  border-style: double;
   transition: 500ms;
 }
 body #contents-tab section .tab-content {
@@ -38,6 +38,7 @@ body #contents-tab section .tab-content {
 body #contents-tab section .tab-content p {
   width: 60vw;
   text-align: center;
+  font-size: 16px;
 }
 @media screen and (min-width: 1000px) {
   body #contents-tab section:nth-child(odd) {
