--- a/style.scss
+++ b/style.scss
@@ -58,7 +58,7 @@ body {
                 // left: 20vw;
                 // top: 0;
 
-                width: 60vw;
+                width: 100vw;
                 height: 100vh;
 
                 p {
@@ -77,7 +77,7 @@ body {
     //             flex-direction: row-reverse;
     //         }
     //     }
-    // }
+    }
 
     .draw-tile {
         position: fixed;
