--- a/style.scss
+++ b/style.scss
@@ -8,68 +8,108 @@ body {
     font-family: 'Open Sans','Zen Kaku Gothic New', sans-serif;
     
     h1 {
-        height: 10vw;
+        // height: 10vw;
 
         font-size: 32px;
         text-align: center;
     }
 
-    #contents-tab {
-
+    #nav {
         display: flex;
-
         flex-direction: column;
 
-        section {
-
+        position: sticky;
+        
+        .tab-title{
             display: flex;
+            justify-content: center;
+            align-items: center;
 
-            .tab-title {
-                
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                
-                position: fixed;
+            width: 15vw;
+            height: 15vh;
 
-                width: 20vw;
-                height: 15vw;
+            background-color: $base-color;
 
-                background-color: $base-color;
+            border-color: $main-color;
+            border-width: 5px;
+            border-style: double;
 
-                border-color: $main-color;
-                border-width: 5px;
-                border-style: double;
-
-                transition: 500ms;
-
-                .profile {
-                    left: 0vw;
-                    top: 10vh;
-                }
-            
-            }
-    
-            .tab-content {
-                // display: none;
-                align-items: center;
-
-                // position: fixed;
-                // left: 20vw;
-                // top: 0;
-
-                width: 100vw;
-                height: 100vh;
-
-                p {
-                    width: 60vw;
-                    text-align: center;
-
-                    font-size: 16px;
-                }
-                
-            }
+            transition: 500ms;
         }
+    }
+
+    .content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        width: 100vw;
+
+        h2{
+            display: none;
+        }
+
+        .tab-content{
+            width: 70vw;
+        }
+    }
+
+    // #contents-tab {
+
+    //     display: flex;
+
+    //     flex-direction: column;
+
+    //     section {
+
+    //         display: flex;
+
+    //         .tab-title {
+                
+    //             display: flex;
+    //             justify-content: center;
+    //             align-items: center;
+                
+    //             position: fixed;
+
+    //             width: 20vw;
+    //             height: 15vw;
+
+    //             background-color: $base-color;
+
+    //             border-color: $main-color;
+    //             border-width: 5px;
+    //             border-style: double;
+
+    //             transition: 500ms;
+
+    //             .profile {
+    //                 left: 0vw;
+    //                 top: 10vh;
+    //             }
+            
+    //         }
+    
+    //         .tab-content {
+    //             // display: none;
+    //             align-items: center;
+
+    //             // position: fixed;
+    //             // left: 20vw;
+    //             // top: 0;
+
+    //             width: 100vw;
+    //             height: 100vh;
+
+    //             p {
+    //                 width: 60vw;
+    //                 text-align: center;
+
+    //                 font-size: 16px;
+    //             }
+                
+    //         }
+    //     }
     
     // @media screen and (min-width: 1000px){
     //         section:nth-child(odd){
@@ -77,7 +117,7 @@ body {
     //             flex-direction: row-reverse;
     //         }
     //     }
-    }
+    //}
 
     .draw-tile {
         position: fixed;
