--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,9 @@ body {
   color: #003881;
   background-color: rgba(255, 255, 255, 0.4745098039);
   font-family: "Open Sans", "Zen Kaku Gothic New", sans-serif;
-  padding-bottom: 500px;
 }
 body h1 {
-  height: 150px;
+  height: 10vh;
   font-size: 32px;
   text-align: center;
 }
@@ -20,7 +19,7 @@ body #nav .tab-title {
   justify-content: center;
   align-items: center;
   width: 15vw;
-  height: 100px;
+  height: 15vh;
   background-color: rgba(255, 255, 255, 0.4745098039);
   border-color: #deffb3;
   border-width: 5px;
@@ -44,7 +43,7 @@ body .content .tab-content {
   justify-content: center;
   align-items: center;
   width: 70vw;
-  height: 500px;
+  height: 100vh;
 }
 body .draw-tile {
   position: fixed;
