--- a/style.scss
+++ b/style.scss
@@ -6,11 +6,9 @@ body {
     color: $accent-color;
     background-color: $base-color;
     font-family: 'Open Sans','Zen Kaku Gothic New', sans-serif;
-
-    padding-bottom: 500px;
     
     h1 {
-        height: 150px;
+        height: 10vh;
 
         font-size: 32px;
         text-align: center;
@@ -29,7 +27,7 @@ body {
             align-items: center;
 
             width: 15vw;
-            height: 100px;
+            height: 15vh;
 
             background-color: $base-color;
 
@@ -62,7 +60,7 @@ body {
             align-items: center;
 
             width: 70vw;
-            height: 500px;
+            height: 100vh;
 
         }
     }
