--- a/style.scss
+++ b/style.scss
@@ -2,15 +2,19 @@ $base-color:#ffffff79;
 $main-color:#deffb3;
 $accent-color:#003881;
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     color: $accent-color;
     background-color: $base-color;
     font-family: 'Open Sans','Zen Kaku Gothic New', sans-serif;
-    
+
     h1 {
         height: 10vh;
 
-        font-size: 32px;
+        font-size: 48px;
         text-align: center;
     }
 
@@ -58,9 +62,12 @@ body {
             display: flex;
             justify-content: center;
             align-items: center;
+            gap: 40px;
 
             width: 70vw;
             height: 100vh;
+
+            font-size: 32px;
 
         }
     }
