--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,6 @@ body #nav a .tab-title {
 body #nav a:nth-of-type(odd) {
   align-self: flex-end;
 }
-@media screen and (min-width: 1000px) {
-  a body #nav:nth-of-type(odd) {
-    align-self: flex-start;
-  }
-}
 body .content {
   display: flex;
   justify-content: center;
@@ -59,6 +54,17 @@ body .content .tab-content {
   width: 70vw;
   height: 100vh;
   font-size: 32px;
+}
+@media screen and (max-width: 1000px) {
+  body h1 {
+    font-size: 28px;
+  }
+  body #nav a {
+    align-self: flex-end;
+  }
+  body .content .tab-content {
+    font-size: 16px;
+  }
 }
 body .draw-tile {
   position: fixed;
