--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,6 @@ body .content {
   justify-content: center;
   align-items: center;
   width: 100vw;
-  border-color: #deffb3;
-  border-width: 5px;
-  border-style: double;
 }
 body .content h2 {
   display: none;
@@ -60,9 +57,15 @@ body .content .tab-content {
   font-size: 32px;
 }
 body .content .tab-content span {
-  border-radius: 100px;
+  display: inline-block;
+  width: 20px;
+  height: 24px;
+  border-radius: 10px;
   border-color: #003881;
-  border-width: 2px;
+  border-width: 1px;
+  font-family: "Bree Serif", sans-serif;
+  font-size: 18px;
+  text-align: center;
 }
 @media screen and (max-width: 1000px) {
   body h1 {
