--- a/style.scss
+++ b/style.scss
@@ -122,6 +122,14 @@ body {
         }
     }
 
+    .draw-section {
+        position: fixed;
+        left: 0;
+        top: 0;
+
+        z-index: -10000;
+        // transform: rotate(0deg);
+    }
 
     .draw-tile {
         position: fixed;
